--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@types/node": "^12.12.21",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
-    "typescript": "4.0"
+    "@types/node": "^12.20.13",
+    "@types/react": "^17.0.8",
+    "@types/react-dom": "^17.0.5",
+    "typescript": "^4.0.7"
   },
   "license": "MIT"
 }
