--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
@@ -16,6 +18,13 @@
     "@types/node": "^12.20.13",
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "prettier": "2.3.0",
     "typescript": "^4.0.7"
   },
   "license": "MIT"
