--- a/package.json
+++ b/package.json
@@ -5,14 +5,26 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "test": "jest"
   },
   "dependencies": {
+    "@babel/core": "^7.14.3",
+    "@types/jest": "^26.0.23",
+    "@types/react-test-renderer": "^17.0.1",
+    "@types/styled-components": "^5.1.9",
+    "axios": "^0.21.1",
+    "babel-jest": "^27.0.2",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.0.3",
+    "jest-watch-typeahead": "^0.6.4",
     "next": "latest",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-test-renderer": "^17.0.2",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^12.20.13",
@@ -24,8 +36,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
-    "prettier": "2.3.0",
-    "typescript": "^4.0.7"
+    "prettier": "^2.3.0",
+    "typescript": "^4.3.2"
   },
   "license": "MIT"
 }
