--- a/package.json
+++ b/package.json
@@ -10,34 +10,44 @@
   },
   "dependencies": {
     "@babel/core": "^7.14.3",
+    "@material-ui/styles": "^4.11.4",
     "@types/jest": "^26.0.23",
     "@types/react-test-renderer": "^17.0.1",
-    "@types/styled-components": "^5.1.9",
     "axios": "^0.21.1",
     "babel-jest": "^27.0.2",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-react-hooks": "^4.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.3",
     "jest-watch-typeahead": "^0.6.4",
     "next": "latest",
+    "next-redux-wrapper": "^6.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.4",
     "react-test-renderer": "^17.0.2",
-    "styled-components": "^5.3.0"
+    "redux": "^4.1.0",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@types/node": "^12.20.13",
-    "@types/react": "^17.0.8",
+    "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.5",
+    "@types/react-sizes": "^2.0.0",
+    "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
+    "add": "^2.0.6",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "prettier": "^2.3.0",
+    "react-sizes": "^2.0.0",
+    "styled-components": "^5.3.0",
+    "styled-reset": "^4.3.4",
     "typescript": "^4.3.2"
   },
   "license": "MIT"
