--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/core": "^7.14.3",
     "@material-ui/styles": "^4.11.4",
+    "@reduxjs/toolkit": "^1.5.1",
     "@types/jest": "^26.0.23",
     "@types/react-test-renderer": "^17.0.1",
     "axios": "^0.21.1",
@@ -28,12 +29,16 @@
     "react-redux": "^7.2.4",
     "react-test-renderer": "^17.0.2",
     "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "semantic-ui-react": "^2.0.3",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@types/node": "^12.20.13",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.5",
+    "@types/react-redux": "^7.1.16",
     "@types/react-sizes": "^2.0.0",
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
