--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.5.1",
     "@types/jest": "^26.0.23",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/redux-saga": "^0.10.5",
     "axios": "^0.21.1",
     "babel-jest": "^27.0.2",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -31,6 +32,7 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "semantic-ui-react": "^2.0.3",
     "yarn": "^1.22.10"
   },
@@ -40,6 +42,7 @@
     "@types/react-dom": "^17.0.5",
     "@types/react-redux": "^7.1.16",
     "@types/react-sizes": "^2.0.0",
+    "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
