--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "babel-jest": "^27.0.2",
     "babel-plugin-module-resolver": "^4.1.0",
+    "dotenv-webpack": "^7.0.3",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-react-hooks": "^4.2.0",
     "identity-obj-proxy": "^3.0.0",
