--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
     "build": "next build",
     "start": "next start",
     "type-check": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "ts-node": "ts-node -r tsconfig-paths/register ./src/index.ts"
   },
   "dependencies": {
     "@babel/core": "^7.14.3",
-    "@material-ui/styles": "^4.11.4",
     "@reduxjs/toolkit": "^1.5.1",
     "@types/jest": "^26.0.23",
+    "@types/next": "^9.0.0",
     "@types/react-test-renderer": "^17.0.1",
     "@types/redux-saga": "^0.10.5",
+    "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.21.1",
     "babel-jest": "^27.0.2",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -23,7 +25,6 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.3",
-    "jest-watch-typeahead": "^0.6.4",
     "next": "latest",
     "next-redux-wrapper": "^6.0.2",
     "react": "^17.0.1",
@@ -38,7 +39,7 @@
     "yarn": "^1.22.10"
   },
   "devDependencies": {
-    "@types/node": "^12.20.13",
+    "@types/node": "^12.20.14",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.5",
     "@types/react-redux": "^7.1.16",
@@ -53,10 +54,13 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
+    "fork-ts-checker-webpack-plugin": "^6.2.10",
     "prettier": "^2.3.0",
     "react-sizes": "^2.0.0",
     "styled-components": "^5.3.0",
     "styled-reset": "^4.3.4",
+    "ts-node": "^10.0.0",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.3.2"
   },
   "license": "MIT"
