import 절대경로로 변경

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,11 @@
   ],
   "paths": {
     "components/*": [
-      "components/*"
+      "components/*",
+      "pages/*",
+      "store/*",
+      "styles/*",
+      "utils/*"
     ]
   }
 }
