--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/next": "^9.0.0",
     "@types/react-test-renderer": "^17.0.1",
     "@types/redux-saga": "^0.10.5",
+    "@typescript-eslint/typescript-estree": "^4.26.0",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.21.1",
     "babel-jest": "^27.0.2",
@@ -50,12 +51,12 @@
     "@typescript-eslint/parser": "^4.26.0",
     "add": "^2.0.6",
     "babel-plugin-styled-components": "^1.12.0",
-    "eslint": "^7.27.0",
+    "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "fork-ts-checker-webpack-plugin": "^6.2.10",
-    "prettier": "^2.3.0",
+    "prettier": "^2.3.1",
     "react-sizes": "^2.0.0",
     "styled-components": "^5.3.0",
     "styled-reset": "^4.3.4",
