--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next-redux-wrapper": "^6.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^7.2.4",
     "react-test-renderer": "^17.0.2",
     "redux": "^4.1.0",
