--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jest": "^27.0.3",
     "next": "latest",
     "next-redux-wrapper": "^6.0.2",
+    "next-routes": "^1.4.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-infinite-scroll-component": "^6.1.0",
