--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "next start",
     "type-check": "tsc",
     "test": "jest",
-    "ts-node": "ts-node -r tsconfig-paths/register ./src/index.ts"
+    "ts-node": "ts-node -r tsconfig-paths/register ./src/index.ts",
+    "prettier": "prettier --write --config ./.prettierrc './src/**/*.{ts,tsx}'"
   },
   "dependencies": {
     "@babel/core": "^7.14.3",
@@ -49,8 +50,8 @@
     "@types/react-sizes": "^2.0.0",
     "@types/redux-logger": "^3.0.8",
     "@types/styled-components": "^5.1.9",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
     "add": "^2.0.6",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.28.0",
