--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
     "plugins": [
       [
         "styled-components",
+        //  "babel-plugin-styled-components",
         {
           "ssr": true,
           "displayName": true,
