--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-modal": "^3.14.2",
     "react-redux": "^7.2.4",
     "react-test-renderer": "^17.0.2",
     "redux": "^4.1.0",
@@ -46,6 +47,7 @@
     "@types/node": "^12.20.14",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.5",
+    "@types/react-modal": "^3.12.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-sizes": "^2.0.0",
     "@types/redux-logger": "^3.0.8",
