--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-modal": "^3.14.2",
     "react-redux": "^7.2.4",
     "react-test-renderer": "^17.0.2",
+    "react-viewer": "^3.2.2",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
