--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-redux-wrapper": "^6.0.2",
     "next-routes": "^1.4.2",
     "react": "^17.0.1",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.14.2",
