--- a/.babelrc
+++ b/.babelrc
@@ -5,12 +5,7 @@
     "plugins": [
       [
         "styled-components",
-        //  "babel-plugin-styled-components",
-        {
-          "ssr": true,
-          "displayName": true,
-          "preprocess": false
-        }
+        {"ssr": true, "displayName": true}
       ]
     ]
   }
