--- a/.eslintrc
+++ b/.eslintrc
@@ -35,9 +35,26 @@
       //     "alphabetize": {
       //       "order": "desc",
       //       "caseInsensitive": true
-      //     }
+      //     },
       //   }
       // ]
-    }
+    },
+  //   "settings": {
+  //     "import/resolver": {
+  //       "node": {
+  //         "extensions": [".ts", ".tsx"],
+  //         "moduleDirectory": [
+  //           "node_modules",
+  //           "src/"
+  //         ]
+  //       },
+  //       "typescript": {
+  //         "alwaysTryTypes": true
+  //       }
+  //     },
+  //     "react": {
+  //       "version": "detect"
+  //     }
+  //   }
   }
   
