--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "@babel/core": "^7.14.3",
     "@reduxjs/toolkit": "^1.5.1",
-    "@types/jest": "^26.0.23",
     "@types/next": "^9.0.0",
     "@types/react-router": "^5.1.15",
     "@types/react-test-renderer": "^17.0.1",
@@ -18,13 +17,11 @@
     "@typescript-eslint/typescript-estree": "^4.26.0",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.21.1",
-    "babel-jest": "^27.0.2",
     "babel-plugin-module-resolver": "^4.1.0",
     "dotenv-webpack": "^7.0.3",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-react-hooks": "^4.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.0.3",
     "next": "latest",
     "next-redux-wrapper": "^6.0.2",
     "next-routes": "^1.4.2",
@@ -47,6 +44,11 @@
     "yarn": "^1.22.10"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-typescript": "^7.14.5",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@types/jest": "^26.0.23",
     "@types/node": "^12.20.14",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.5",
@@ -58,6 +60,7 @@
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "add": "^2.0.6",
+    "babel-jest": "^27.0.2",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
@@ -65,10 +68,12 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "fork-ts-checker-webpack-plugin": "^6.2.10",
+    "jest": "^27.0.4",
     "prettier": "^2.3.1",
     "react-sizes": "^2.0.0",
     "styled-components": "^5.3.0",
     "styled-reset": "^4.3.4",
+    "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.3.2"
