--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,7 @@
       "commonjs": true,
       "node": true
     },
-    "extends": [ "plugin:prettier/recommended", "prettier/@typescript-eslint","plugin:@typescript-eslint/recommended" ],
+    "extends": [ "plugin:prettier/recommended", "prettier/@typescript-eslint","plugin:@typescript-eslint/recommended" ,"plugin:react/recommended"],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
       "ecmaVersion": 2018,
@@ -14,7 +14,7 @@
       },
       "sourceType": "module"
     },
-    "project": "tsconfig.json",
+    // "project": "tsconfig.json",
     "plugins": ["react", "import", "@typescript-eslint"],
     "rules": {
       "react/react-in-jsx-scope": 0,
