--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "axios": "^0.21.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "dotenv-webpack": "^7.0.3",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "identity-obj-proxy": "^3.0.0",
     "next": "latest",
     "next-redux-wrapper": "^6.0.2",
@@ -60,12 +58,17 @@
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "add": "^2.0.6",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^27.0.2",
     "eslint": "^7.28.0",
+    "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^6.0.0",
     "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^6.2.10",
     "jest": "^27.0.4",
     "prettier": "^2.3.1",
@@ -75,7 +78,8 @@
     "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "webpack": "^5.40.0"
   },
   "license": "MIT"
 }
