--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "firebase/firebase.js"  ],
   "paths": {
     "components/*": [
       "components/*",
