--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,7 @@
       "commonjs": true,
       "node": true
     },
-    "extends": [ "plugin:prettier/recommended", "prettier/@typescript-eslint","plugin:@typescript-eslint/recommended" ,"plugin:react/recommended"],
+    "extends": [ "plugin:prettier/recommended", "plugin:react/recommended"],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
       "ecmaVersion": 2018,
@@ -18,7 +18,7 @@
     "plugins": ["react", "import", "@typescript-eslint"],
     "rules": {
       "react/react-in-jsx-scope": 0,
-      "no-console": ["error", { "allow": ["warn", "error"] }],
+      "no-console": ["warn", { "allow": ["warn", "error"] }],
       // "import/order": [
       //   "error",
       //   {
