--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
+    "server": "node server",
     "build": "next build",
     "start": "next start",
     "test": "jest"
@@ -19,6 +20,7 @@
     "axios": "^0.21.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "dotenv-webpack": "^7.0.3",
+    "express": "^4.17.1",
     "firebase": "^8.6.8",
     "identity-obj-proxy": "^3.0.0",
     "next": "latest",
