--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "next",
     "server": "nodemon server",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production nodemon server/index.js",
     "test": "jest"
   },
   "dependencies": {
