--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,6 @@
       },
       "sourceType": "module"
     },
-    // "project": "tsconfig.json",
     "plugins": ["react", "import", "@typescript-eslint"],
     "rules": {
       "react/react-in-jsx-scope": 0,
@@ -25,7 +24,7 @@
       //     "groups": ["builtin", "external", "internal"],
       //        "pathGroups": [
       //       {
-      //         "pattern": "react",
+      //         "pattern": "react",s
       //         "group": "external",
       //         "position": "before"
       //       }
