--- a/.eslintrc
+++ b/.eslintrc
@@ -18,25 +18,25 @@
     "rules": {
       "react/react-in-jsx-scope": 0,
       "no-console": ["warn", { "allow": ["warn", "error"] }],
-      // "import/order": [
-      //   "error",
-      //   {
-      //     "groups": ["builtin", "external", "internal"],
-      //        "pathGroups": [
-      //       {
-      //         "pattern": "react",s
-      //         "group": "external",
-      //         "position": "before"
-      //       }
-      //     ],
-      //     "pathGroupsExcludedImportTypes": ["react"],
-      //     "newlines-between": "ignore",
-      //     "alphabetize": {
-      //       "order": "desc",
-      //       "caseInsensitive": true
-      //     },
-      //   }
-      // ]
+      "import/order": [
+        "error",
+        {
+          "groups": ["builtin", "external", "internal"],
+             "pathGroups": [
+            {
+              "pattern": "react",
+              "group": "external",
+              "position": "before"
+            }
+          ],
+          "pathGroupsExcludedImportTypes": ["react"],
+          "newlines-between": "ignore",
+          "alphabetize": {
+            "order": "desc",
+            "caseInsensitive": true
+          },
+        }
+      ]
     }
   }
   
